[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-github-description"
version = "0.0.1"
description = "A python package that allows to get the description of a GitHub repository"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/timotheeMM/get-github-description"
Issues = "https://github.com/timotheeMM/get-github-description/issues"

[project.dependencies]
requests = "^2.32.3"
